# chatbox-cli

./: .gitignore  LICENSE  README.md  __main__.py  config.toml  download-python.sh  lacia.exe.json  lacia.sh  main.py  package.sh  pyproject.toml
lacia/: __init__.py  config.toml
src/: config.toml  t5.py
src/prompts/: codex.txt  roocode.md  roocode.txt
