[project]
name = "lacia"
version = "25.06.00"
description = "An agent named Lacia"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["httpx[http2]>=0.28.1", "prompt-toolkit>=3.0.51"]

[project.scripts]
lacia = "t5:main"

[build-system]
requires = ["uv_build>=0.7.13,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "lacia"
module-root = ""

[tool.uv]
package = true

[tool.ruff]
line-length = 120
